--- a/index.html
+++ b/index.html
@@ -33,7 +33,45 @@
     </div>
 
     <main>
-        
+        <h2>
+            Connect with other users like never before
+        </h2>
+        <div class="feature feat-1">
+            <h3>
+                Chat in Real-Time
+            </h3>
+            <p>
+                With Connect.ly's new chat system, reaching out to other users has never been easier. Find new people to connect with, and stay in touch with your besties.
+            </p>
+            <a href="learnmore.html">Learn More</a>
+        </div>
+        <div class="feature feat-2">
+            <h3>
+                Organize Events
+            </h3>
+            <p>
+                Finding the right time and place to get everyone together was tricky before Connect.ly. Now, you can use a simple grid-based view to find out what works best for everyone.
+            </p>
+            <a href="learnmore.html">Learn More</a>
+        </div>
+        <div class="feature feat-3">
+            <h3>
+                Play Favorites
+            </h3>
+            <p>
+                Let's face it, everyone has favorites. With Connect.ly, now you can not only track your favorite products, but share them with the rest of your network too.
+            </p>
+            <a href="learnmore.html">Learn More</a>
+        </div>
+        <div class="feature feat-4">
+            <h3>
+                Earn Kred
+            </h3>
+            <p>
+                When you engage with our community, you should be rewarded. That's why Connect.ly tracks the Kred you've already accumulated and gives you even more ways to earn Kred.
+            </p>
+            <a href="learnmore.html">Learn More</a>
+        </div>
     </main>
 
 
