Add corrected style and html elements to header

--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
 </head>
 
 <body>
-    <header>
-        <table>
-            <th class="header">Connect.ly</th>
-            <th><a href="features.html">Features</a></th>
-            <th><a href="pricing.html">Pricing</a></th>
-            <th><a href="community.html">Community</a></th>
-            <th><a href="support.html">Support</a></th>
-        </table>
-    </header>
+    <nav>
+        <h1 class="title">
+            Connect.ly
+        </h1>
+        <ul>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="community.html">Community</a></li>
+            <li><a href="support.html">Support</a></li>
+        </ul>
+        <div class="interactives">
+            <a href="login.html">Login</a>
+            <a href="register.html">Register</a>
+        </div>
+    </nav>
 
     <div class="main-image">
         <img src="/connect.ly/community.webp" alt="Silhouette">
