--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <div class="main-image">
-        <img src="/connect.ly/community.webp" alt="Silhouette">
+        <img src="community.jpg" alt="Silhouette">
         <div class =main-banner>
             <h2>Bringing our Community Together</h2>
             <br>
