--- a/support.html
+++ b/support.html
@@ -20,6 +20,6 @@
     <h2>
         In the meantime, please <a href="index.html">return</a> to our main page.
     </h2>
-    <img src="/connect.ly/fairygodmother.jfif" alt="Fairy Godmother">
+    <img src="fairygodmother.jpg" alt="Fairy Godmother">
 </body>
 </html>
